--- a/cfg/navigation/flight_base.yaml
+++ b/cfg/navigation/flight_base.yaml
@@ -1,5 +1,5 @@
 takeoff_height: 1.0 # m
-use_global_planner: false
+use_global_planner: true
 use_mpc_planner: true
 no_yaw_turning: false
 use_yaw_control: true
@@ -10,7 +10,7 @@ trajectory_info_save_path: "No"
 use_time_optimizer: false
 
 # target parameters
-use_predefined_goal: true
+use_predefined_goal: false
 goal: [0, 0, 1.0,
        4, 0, 1.0,
        4, -4, 1.0,
