--- a/cfg/dynamic_navigation/dynamic_detector_param.yaml
+++ b/cfg/dynamic_navigation/dynamic_detector_param.yaml
@@ -4,6 +4,8 @@ depth_image_topic: /camera/depth/image_raw
 aligned_depth_image_topic: /camera/depth/image_raw
 pose_topic: /CERLAB/quadcopter/pose
 odom_topic: /CERLAB/quadcopter/odom
+# pose_topic: /mavros/local_position/pose
+# odom_topic: /mavros/local_position/odom
 
 # depth_image_topic: /camera/depth/image_rect_raw
 # aligned_depth_image_topic: /camera/aligned_depth_to_color/image_raw
@@ -54,7 +56,7 @@ yolo_overwrite_distance: 3
 
 # tracking and data association
 history_size: 100 # size of tracking history. history[0] is current detection
-prediction_size: 20 # size of prediction
+prediction_size: 30 # size of prediction
 similarity_threshold: 0.02 # similiary threshold for data association matching comparison
 retrack_similarity_threshold: 0.015  # similiary threshold for retracking
 fix_size_history_threshold: 10 # History threshold (num of frames) to fix box size
@@ -77,8 +79,8 @@ dynamic_voting_threshold: 0.8
 maximum_skip_ratio: 0.5 # the upper limit of points that are skipped(out of previous FOV) to be classfified as dynamic
 frames_force_dynamic: 10 # Range of searching dynamic obstacles in box history
 frames_force_dynamic_check_range: 30 # threshold for forcing dynamic obstacles
-dynamic_consistency_threshold: 5 # obstacles being voted as dynamic for continuous k frames are eligible to be classified as dynamic
+dynamic_consistency_threshold: 500 # obstacles being voted as dynamic for continuous k frames are eligible to be classified as dynamic
 
 # constrain size
 constrain_size: true
-target_object_size: [0.5, 0.5, 1.7]
+target_object_size: [100, 100, 1.7]
