--- a/cfg/dynamic_navigation/fake_detector_param.yaml
+++ b/cfg/dynamic_navigation/fake_detector_param.yaml
@@ -1,5 +1,7 @@
 # this is only used in simulation
-color_distance: 7.0
+use_mocap: false
+obstacle_size: [0.5, 0.5, 1.8]
+color_distance: 4.0
 target_obstacle: ["person", "dynamic_box", "dynamic_cylinder"]
 # odom_topic: "mavros/local_position/odom"
 odom_topic: "/CERLAB/quadcopter/odom"
