--- a/cfg/dynamic_navigation/mapping_param.yaml
+++ b/cfg/dynamic_navigation/mapping_param.yaml
@@ -4,9 +4,11 @@ depth_image_topic: /camera/depth/image_raw
 # depth_image_topic: /no_topic
 pose_topic: /CERLAB/quadcopter/pose
 odom_topic: /CERLAB/quadcopter/odom
+# pose_topic: /mavros/local_position/pose
+# odom_topic: /mavros/local_position/odom
 
 # robot size
-robot_size: [0.5, 0.5, 0.3]
+robot_size: [0.3, 0.3, 0.3]
 
 # Camera Parameters
 depth_intrinsics: [554.254691191187, 554.254691191187, 320.5, 240.5] # fx,  fy, cx, cy
@@ -34,16 +36,19 @@ p_occ: 0.80
 # Map
 map_resolution: 0.1
 ground_height: -0.1 # m
-map_size: [80, 40, 3] # meter. in x y z direction (reserved size)
+map_size: [40, 120, 3] # meter. in x y z direction (reserved size)
 local_update_range: [5, 5, 5]
 local_bound_inflation: 3.0 # inflate local bound in meter
 clean_local_map: false
 
 # visualziation
-local_map_size: [20, 20, 6] # meter. in x y z direction (only for visualization)
+local_map_size: [40, 120, 6] # meter. in x y z direction (only for visualization)
 max_height_visualization: 2.5 # m
 visualize_global_map: true
 verbose: false
 
-prebuilt_map_directory: "No"
+# prebuilt_map_directory: "No"
+# prebuilt_map_directory: "/home/jhy/catkin_ws/test_map.pcd"
+# prebuilt_map_directory: "/home/jhy/catkin_ws/mill19_floor2.pcd"
+prebuilt_map_directory: "/home/hanyujin/catkin_ws/test.pcd"
 # prebuilt_map_directory: "/home/cerlab/map/static_map.pcd"
