--- a/cfg/dynamic_navigation/planner_param.yaml
+++ b/cfg/dynamic_navigation/planner_param.yaml
@@ -16,7 +16,7 @@ poly_traj/initial_radius: 0.5
 poly_traj/timeout: 0.1
 poly_traj/corridor_res: 5.0
 poly_traj/shrinking_factor: 0.5
-poly_traj/soft_constraint: false
+poly_traj/soft_constraint: true
 poly_traj/constraint_radius: 0.5
 poly_traj/sample_delta_time: 0.1
 poly_traj/maximum_iteration_num: 10
@@ -42,10 +42,10 @@ bspline_traj/prediction_horizon: 2.0
 mpc_planner/horizon: 30
 mpc_planner/z_range_min: 0.7 
 mpc_planner/z_range_max: 1.2 
-mpc_planner/static_safety_dist: 0.5
-mpc_planner/dynamic_safety_dist: 0.5
-mpc_planner/static_constraint_slack_ratio: 0.4
-mpc_planner/dynamic_constraint_slack_ratio: 0.2 
+mpc_planner/static_safety_dist: 0.7
+mpc_planner/dynamic_safety_dist: 0.7
+mpc_planner/static_constraint_slack_ratio: 0.5
+mpc_planner/dynamic_constraint_slack_ratio: 0.5
 # MPC clustering params
 mpc_planner/cloud_res: 0.2
 mpc_planner/local_cloud_region_x: 5.0 # forward
