--- a/cfg/navigation/mapping_param.yaml
+++ b/cfg/navigation/mapping_param.yaml
@@ -46,4 +46,5 @@ visualize_global_map: true
 verbose: false
 
 prebuilt_map_directory: "No"
+# prebuilt_map_directory: "/home/jhy/catkin_ws/test.pcd"
 # prebuilt_map_directory: "/home/cerlab/map/static_map.pcd"
