--- a/cfg/viewpoint_inspection/mapping_param.yaml
+++ b/cfg/viewpoint_inspection/mapping_param.yaml
@@ -53,4 +53,5 @@ visualize_global_map: true
 verbose: false
 
 prebuilt_map_directory: "No"
+# prebuilt_map_directory: "/home/jhy/catkin_ws/tunnel_map.pcd"
 # prebuilt_map_directory: "/home/cerlab/map/static_map.pcd"
