--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,6 +139,7 @@ add_library(
    include/${PROJECT_NAME}/px4/dynamicNavigation.cpp
    include/${PROJECT_NAME}/px4/dynamicInspection.cpp
    include/${PROJECT_NAME}/px4/dynamicExploration.cpp
+   include/${PROJECT_NAME}/px4/viewpointInspection.cpp
 )
 
 ## Add cmake target dependencies of the library
@@ -159,6 +160,7 @@ add_executable(navigation_node src/px4/navigation_node.cpp)
 add_executable(dynamic_navigation_node src/px4/dynamic_navigation_node.cpp)
 add_executable(dynamic_inspection_node src/px4/dynamic_inspection_node.cpp)
 add_executable(dynamic_exploration_node src/px4/dynamic_exploration_node.cpp)
+add_executable(viewpoint_inspection_node src/px4/viewpoint_inspection_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -184,6 +186,7 @@ target_link_libraries(navigation_node ${catkin_LIBRARIES} ${PROJECT_NAME})
 target_link_libraries(dynamic_navigation_node ${catkin_LIBRARIES} ${PROJECT_NAME})
 target_link_libraries(dynamic_inspection_node ${catkin_LIBRARIES} ${PROJECT_NAME})
 target_link_libraries(dynamic_exploration_node ${catkin_LIBRARIES} ${PROJECT_NAME})
+target_link_libraries(viewpoint_inspection_node ${catkin_LIBRARIES} ${PROJECT_NAME})
 
 #############
 ## Install ##
